# vibecut

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: yamllint.yml
.github/workflows/: link-check.yml  lint.yml  manifest-check.yml
agents/capcut/: AGENT.md
agents/subtitle-verifier/: AGENT.md
data/: corrections.json
plugins/vibecut/.claude-plugin/: plugin.json
plugins/vibecut/skills/vibecut-add-subtitles/: SKILL.md
plugins/vibecut/skills/vibecut-auto-edit/: SKILL.md
plugins/vibecut/skills/vibecut-setup/: SKILL.md
scripts/: _lib_backup.py  add_subtitles.py  capcut_editor.py  detect_ng.py  make_segments.py  photo_slideshow.py  splice_segments.py
skills/vibecut-add-subtitles/: SKILL.md
skills/vibecut-auto-edit/: SKILL.md
skills/vibecut-youtube-description/: SKILL.md
