[project]
name = "vibecut"
version = "0.1.0"
description = "CapCut auto-edit & Korean subtitle automation. Claude Code plugin + Codex CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AX-Surfers" }
]
keywords = ["capcut", "video-editing", "whisper", "korean", "subtitles", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AX-Surfers/Vibecut"
Repository = "https://github.com/AX-Surfers/Vibecut"
Issues = "https://github.com/AX-Surfers/Vibecut/issues"

[project.scripts]
vibecut-subtitles = "vibecut.add_subtitles:main"
vibecut-segments = "vibecut.make_segments:main"
vibecut-editor = "vibecut.capcut_editor:main"

[tool.uv]
# uv 추가 옵션
required-version = ">=0.4.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
